--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   firebase.analytics();
   const db = firebase.database();
 
-  const ADMIN_PASSWORD = "admin123"; // ← замените!
+  const ADMIN_PASSWORD = "На горшке сидел король";
   let isAdmin = false;
 
   const ACTIVE_TAB_KEY = 'activeTab';
